5.1
 * Make nodetool reconfigurecms sync by default and add --cancel to be able to cancel ongoing reconfigurations (CASSANDRA-19216)
 * Expose auth mode in system_views.clients, nodetool clientstats, metrics (CASSANDRA-19366)
 * Remove sealed_periods and last_sealed_period tables (CASSANDRA-19189)
 * Improve setup and initialisation of LocalLog/LogSpec (CASSANDRA-19271)
 * Refactor structure of caching metrics and expose auth cache metrics via JMX (CASSANDRA-17062)
 * Allow CQL client certificate authentication to work without sending an AUTHENTICATE request (CASSANDRA-18857)
 * Extend nodetool tpstats and system_views.thread_pools with detailed pool parameters (CASSANDRA-19289) 
 * Remove dependency on Sigar in favor of OSHI (CASSANDRA-16565)
 * Simplify the bind marker and Term logic (CASSANDRA-18813)
 * Limit cassandra startup to supported JDKs, allow higher JDKs by setting CASSANDRA_JDK_UNSUPPORTED (CASSANDRA-18688)
 * Standardize nodetool tablestats formatting of data units (CASSANDRA-19104)
 * Make nodetool tablestats use number of significant digits for time and average values consistently (CASSANDRA-19015)
 * Upgrade jackson to 2.15.3 and snakeyaml to 2.1 (CASSANDRA-18875)
 * Transactional Cluster Metadata [CEP-21] (CASSANDRA-18330)
 * Add ELAPSED command to cqlsh (CASSANDRA-18861)
 * Add the ability to disable bulk loading of SSTables (CASSANDRA-18781)
 * Clean up obsolete functions and simplify cql_version handling in cqlsh (CASSANDRA-18787)
Merged from 5.0:
 * Deprecate native_transport_port_ssl (CASSANDRA-19392)
 * Update packaging shell includes (CASSANDRA-19283)
 * Fix data corruption in VectorCodec when using heap buffers (CASSANDRA-19167)
 * Avoid over-skipping of key iterators from static column indexes during mixed intersections (CASSANDRA-19278)
 * Make concurrent_index_builders configurable at runtime (CASSANDRA-19266)
 * Fix storage_compatibility_mode for streaming (CASSANDRA-19126)