@@ -25,11 +25,9 @@ import java.util.concurrent.ConcurrentHashMap;
 import org.apache.cassandra.utils.concurrent.AsyncFuture;
 import org.apache.cassandra.utils.concurrent.CountDownLatch;
 import java.util.concurrent.TimeUnit;
-import java.util.function.Predicate;
 
 import com.google.common.annotations.VisibleForTesting;
 import com.google.common.base.Preconditions;
-import com.google.common.base.Predicates;
 import com.google.common.collect.Iterables;
 import com.google.common.collect.Lists;
 
@@ -56,6 +54,7 @@ import org.apache.cassandra.utils.concurrent.UncheckedInterruptedException;
 import static org.apache.cassandra.net.Verb.*;
 import static org.apache.cassandra.utils.Clock.Global.nanoTime;
 import static org.apache.cassandra.utils.concurrent.CountDownLatch.newCountDownLatch;
+import static com.google.common.collect.Iterables.all;
 
 public class BlockingPartitionRepair
         extends AsyncFuture<Object> implements RequestCallback<Object>
@@ -64,33 +63,33 @@ public class BlockingPartitionRepair
     private final ReplicaPlan.ForWrite repairPlan;
     private final Map<Replica, Mutation> pendingRepairs;
     private final CountDownLatch latch;
-    private final Predicate<InetAddressAndPort> shouldBlockOn;
     private final int blockFor;
     private volatile long mutationsSentTime;
 
     public BlockingPartitionRepair(DecoratedKey key, Map<Replica, Mutation> repairs, ReplicaPlan.ForWrite repairPlan)
     {
-        this(key, repairs, repairPlan,
-             repairPlan.consistencyLevel().isDatacenterLocal() ? InOurDc.endpoints() : Predicates.alwaysTrue());
-    }
-
-    @VisibleForTesting
-    public BlockingPartitionRepair(DecoratedKey key, Map<Replica, Mutation> repairs, ReplicaPlan.ForWrite repairPlan, Predicate<InetAddressAndPort> shouldBlockOn)
-    {
         this.key = key;
         this.pendingRepairs = new ConcurrentHashMap<>(repairs);
+        this.repairPlan = repairPlan;
+
+        // make sure all the read repair targets are contact of the repair write plan
+        Preconditions.checkState(all(repairs.keySet(), (r) -> repairPlan.contacts().contains(r)),
+                                 "All repair targets should be part of contacts of read repair write plan.");
+
         // Remove empty repair mutations from the block for total, since we're not sending them.
         // Besides, remote dcs can sometimes get involved in dc-local reads. We want to repair them if they do, but we
         // they shouldn't block for them.
         int adjustedBlockFor = repairPlan.writeQuorum();
         for (Replica participant : repairPlan.contacts())
         {
-            if (!repairs.containsKey(participant) && shouldBlockOn.test(participant.endpoint()))
+            if (!repairs.containsKey(participant))
                 adjustedBlockFor--;
+
+            // make sure for local consistency, all contacts are local replicas
+            Preconditions.checkState(!repairPlan.consistencyLevel().isDatacenterLocal() || InOurDc.replicas().test(participant),
+                                     "Local consistency blocking read repair is trying to contact remote DC node: " + participant.endpoint());
         }
         this.blockFor = adjustedBlockFor;
-        this.repairPlan = repairPlan;
-        this.shouldBlockOn = shouldBlockOn;
 
         // there are some cases where logically identical data can return different digests
         // For read repair, this would result in ReadRepairHandler being called with a map of
@@ -119,11 +118,8 @@ public class BlockingPartitionRepair
     @VisibleForTesting
     void ack(InetAddressAndPort from)
     {
-        if (shouldBlockOn.test(from))
-        {
-            pendingRepairs.remove(repairPlan.lookup(from));
-            latch.decrement();
-        }
+        pendingRepairs.remove(repairPlan.lookup(from));
+        latch.decrement();
     }
 
     @Override
@@ -170,10 +166,6 @@ public class BlockingPartitionRepair
             // use a separate verb here to avoid writing hints on timeouts
             sendRR(Message.out(READ_REPAIR_REQ, mutation), destination.endpoint());
             ColumnFamilyStore.metricsFor(tableId).readRepairRequests.mark();
-
-            if (!shouldBlockOn.test(destination.endpoint()))
-                pendingRepairs.remove(destination);
-
             ReadRepairDiagnostics.sendInitialRepair(this, destination.endpoint(), mutation);
         }
     }
@@ -216,7 +208,8 @@ public class BlockingPartitionRepair
         if (awaitRepairsUntil(timeout + timeoutUnit.convert(mutationsSentTime, TimeUnit.NANOSECONDS), timeoutUnit))
             return;
 
-        EndpointsForToken newCandidates = repairPlan.liveUncontacted();
+        EndpointsForToken newCandidates = repairPlan.consistencyLevel().isDatacenterLocal() ? repairPlan.liveUncontacted().filter(InOurDc.replicas()) : repairPlan.liveUncontacted();
+
         if (newCandidates.isEmpty())
             return;
 
